--- a/languages/WP-ReliableMD.pot
+++ b/languages/WP-ReliableMD.pot
@@ -3,10 +3,10 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: WP ReliableMD\n"
-"POT-Creation-Date: 2018-10-07 09:39+0800\n"
+"POT-Creation-Date: 2018-10-07 09:44+0800\n"
 "PO-Revision-Date: 2018-10-07 09:38+0800\n"
 "Last-Translator: \n"
-"Language-Team: \n"
+"Language-Team: WP ReliableMD\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
