--- a/languages/WP-ReliableMD.pot
+++ b/languages/WP-ReliableMD.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: WP ReliableMD\n"
-"POT-Creation-Date: 2018-10-07 09:49+0800\n"
+"POT-Creation-Date: 2018-10-07 09:52+0800\n"
 "PO-Revision-Date: 2018-10-07 09:38+0800\n"
 "Last-Translator: \n"
 "Language-Team: WP ReliableMD\n"
@@ -12,15 +12,16 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.1.1\n"
 "X-Poedit-Basepath: ..\n"
-"X-Poedit-Flags-xgettext: --add-comments=translators:\n"
+"X-Poedit-Flags-xgettext: --add-comments\n"
 "X-Poedit-WPHeader: WP-ReliableMD.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
+#. When extracting abstracts from a Markdown article, there is no hint to extract information.
 #: src/View/Controller.php:36
 msgid "This post has no common text"
 msgstr ""
