--- a/languages/WP-ReliableMD-zh_CN.po
+++ b/languages/WP-ReliableMD-zh_CN.po
@@ -1,13 +1,15 @@
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=1; plural=0;\n"
 "Project-Id-Version: WP ReliableMD\n"
-"POT-Creation-Date: 2018-10-07 23:22+0800\n"
-"PO-Revision-Date: 2018-10-07 23:49+0800\n"
+"POT-Creation-Date: 2018-10-08 15:54+0800\n"
+"PO-Revision-Date: 2018-10-08 15:54+0800\n"
+"Last-Translator: jack9603301 <jack9603301@163.com>\n"
 "Language-Team: WP ReliableMD\n"
+"Language: zh\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Poedit 2.1.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments\n"
@@ -16,8 +18,6 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"Last-Translator: jack9603301 <jack9603301@163.com>\n"
-"Language: zh\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
@@ -32,6 +32,14 @@ msgstr "Github"
 #: src/Meta/Controller.php:25
 msgid "Issues"
 msgstr "问题"
+
+#: src/Meta/Controller.php:27
+msgid "Gitlab"
+msgstr "Gitlab"
+
+#: src/Meta/Controller.php:28
+msgid "Gitee"
+msgstr "Gitee"
 
 #: src/View/Controller.php:36
 msgid "This post has no common text"
